--- a/demo/multi-agent.html
+++ b/demo/multi-agent.html
@@ -1,8 +1,7 @@
 
-<script src="aime.js"></script>
+<script type="module">
+    import langobject from './src/langobject.js'
 
-<script>
-    
     class Scheduler{
         createSchedule(topic){
             return {
@@ -19,5 +18,5 @@
         plan(topic){}
     }
 
-    document.write(aime(new Scheduler()).createSchedule("4 days trip for South Korea"))
+    document.write(langobject(new Scheduler()).createSchedule("4 days trip for South Korea"))
 </script>
