idea of multi-agent programming style

--- a/demo/tool-invocation.html
+++ b/demo/tool-invocation.html
@@ -1,7 +1,7 @@
 
 
 <script type="module">
-    import langobject from './src/langobject.js'
+    import langobject from '../src/langobject.js'
     
     class Scheduler{
         createSchedule(topic){
